# spot2-ai

./: .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/test/: test_chat.py
frontend/: Dockerfile  app.py
